// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rubric viewer expanded snapshot renders 1`] = `
<div>
  <div
    class="css-vkxyqu css-14680sq"
  >
    <h2
      class="css-1by6v1t"
    >
      Rubric
    </h2>
    <h2
      aria-expanded="true"
      class="css-1g71rcn"
      id="rubric-toggle"
      role="button"
      tabindex="0"
    >
      Hide
       Rubric
      <span
        aria-hidden="true"
        class="css-se8c3z"
      >
        <svg
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <polyline
            points="18 15 12 9 6 15"
          />
        </svg>
      </span>
    </h2>
    <div
      class="MuiCollapse-root MuiCollapse-vertical css-1f6q371-MuiCollapse-root"
      style="min-height: 0px; height: 0px; transition-duration: 225ms;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
        >
          <nav
            class="MuiList-root MuiList-padding css-b7dj7n-MuiList-root"
          >
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1rozhf0-MuiListItem-root"
            >
              <h3
                class="css-ieeyj3"
              >
                3 PTS
              </h3>
              <div
                class="css-116pngt"
              >
                bingo
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1rozhf0-MuiListItem-root"
            >
              <h3
                class="css-ieeyj3"
              >
                2 PTS
              </h3>
              <div
                class="css-116pngt"
              >
                mostly right
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1rozhf0-MuiListItem-root"
            >
              <h4
                class="css-1uvbmii"
              >
                Sample Answer
              </h4>
              <div
                class="css-116pngt"
              >
                not left
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1rozhf0-MuiListItem-root"
            >
              <h3
                class="css-ieeyj3"
              >
                1 PT
              </h3>
              <div
                class="css-116pngt"
              >
                a teeny bit right
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1rozhf0-MuiListItem-root"
            >
              <h4
                class="css-1uvbmii"
              >
                Sample Answer
              </h4>
              <div
                class="css-116pngt"
              >
                just right
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1rozhf0-MuiListItem-root"
            >
              <h3
                class="css-ieeyj3"
              >
                0 PTS
              </h3>
              <div
                class="css-116pngt"
              >
                nothing right
              </div>
            </li>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`rubric viewer snapshot renders 1`] = `
<div>
  <div
    class="css-vkxyqu css-14680sq"
  >
    <h2
      class="css-1by6v1t"
    >
      Rubric
    </h2>
    <h2
      aria-expanded="false"
      class="css-1g71rcn"
      id="rubric-toggle"
      role="button"
      tabindex="0"
    >
      Show
       Rubric
      <span
        aria-hidden="true"
        class="css-se8c3z"
      >
        <svg
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
        >
          <polyline
            points="6 9 12 15 18 9"
          />
        </svg>
      </span>
    </h2>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-cwrbtg-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
        >
          <nav
            class="MuiList-root MuiList-padding css-b7dj7n-MuiList-root"
          >
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1rozhf0-MuiListItem-root"
            >
              <h3
                class="css-ieeyj3"
              >
                3 PTS
              </h3>
              <div
                class="css-116pngt"
              >
                bingo
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1rozhf0-MuiListItem-root"
            >
              <h3
                class="css-ieeyj3"
              >
                2 PTS
              </h3>
              <div
                class="css-116pngt"
              >
                mostly right
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1rozhf0-MuiListItem-root"
            >
              <h4
                class="css-1uvbmii"
              >
                Sample Answer
              </h4>
              <div
                class="css-116pngt"
              >
                not left
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1rozhf0-MuiListItem-root"
            >
              <h3
                class="css-ieeyj3"
              >
                1 PT
              </h3>
              <div
                class="css-116pngt"
              >
                a teeny bit right
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1rozhf0-MuiListItem-root"
            >
              <h4
                class="css-1uvbmii"
              >
                Sample Answer
              </h4>
              <div
                class="css-116pngt"
              >
                just right
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1rozhf0-MuiListItem-root"
            >
              <h3
                class="css-ieeyj3"
              >
                0 PTS
              </h3>
              <div
                class="css-116pngt"
              >
                nothing right
              </div>
            </li>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;
